--- a/assets/css/upload.css
+++ b/assets/css/upload.css
@@ -88,7 +88,16 @@ input {
 }
 
 @media only screen and (max-width: 600px) {
+    .main {
+        height: 100%;
+    }
+
     .card {
-        max-width: 65%;
+        max-width: 70%;
+    }
+
+    .card img {
+        max-width: 150px;
+        max-height: 150px;
     }
 }
